--- a/index.html
+++ b/index.html
@@ -34,14 +34,11 @@
         </p>
       </div>
     </div>
-    <!-- 
-    Improve your front-end skills by building projects Scan the QR code to visit
-    Frontend Mentor and take your coding skills to the next level
-      <div class="attribution">
+    <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div> -->
+      >. Coded by <a href="#">Karthi</a>.
+    </div>
   </body>
 </html>
