--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
-    <div class="container">
+    <main class="container">
       <div class="card">
         <img src="images/qr-code.png" alt="" class="card__qr" />
         <h1 class="card__heading">
@@ -33,12 +33,12 @@
           to the next level
         </p>
       </div>
-    </div>
-    <div class="attribution">
+    </main>
+    <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Karthi</a>.
-    </div>
+    </footer>
   </body>
 </html>
